--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -8,7 +8,7 @@ Um Übersicht über die Teilprobleme zu behalten wurde eine Funktionsskizze gesc
 in  Abbildung \ref{fig:Funktionsskizze} ersichtlich ist.\\
 \begin{figure}[h!]
 	\centering
-	\includegraphics[scale=0.73,clip,trim= 14mm 17.8cm 12mm 50mm]
+	\includegraphics[width=.9\textwidth,clip,trim= 14mm 17.8cm 12mm 50mm]
 	{Enddokumentation/Varianten/Bilder/Funktionsskizze.pdf}
 	\caption{Funktionsskizze}
 	\label{fig:Funktionsskizze}
@@ -28,7 +28,7 @@ wurden vier Varianten während einer Diskussionsrunde festgelegt.
 \begin{landscape}
 	\begin{figure}[t]
 		\centering
-		\includegraphics[scale=0.8,clip,trim= 15mm 37mm 21mm 19mm]
+		\includegraphics[scale=0.89,clip,trim= 15mm 37mm 21mm 19mm]
 		{Enddokumentation/Varianten/Bilder/Grobkonzept.pdf}
 		\caption{Lösungsansätze für die einzelnen Teilprobleme mit den vier gewählten Varianten}
 		\label{fig:Grobkonzept}
@@ -46,16 +46,18 @@ wiederum, äquivalent zur zweiten Variante eine Smartphone-Kamera zur Korberkenn
 Akkumulator als Energieversorgung.\\
 \\
 Die Entscheidung fiel auf die orange Variante. Diese bietet als gesamtes Konzept die
-erfolgversprechendste und effizienteste Lösung, bezüglich der Zielsetzung des Teams. \\
+erfolgversprechendste und effizienteste Lösung, bezüglich der Zielsetzung des Teams.
 
-\begin{tabular}{p{1cm}p{10cm}}
-	\multirow{3}{4cm}	{\includegraphics[width=1cm]{Enddokumentation/Varianten/Bilder/info_icon.png}}
-	 & Die detaillierte Beschreibung der Lösungsfindung (von der Funktionsskizze bis zum
-	 Feinkonzept) war Aufgabe des zweiten Testates und ist als Dokument im Anhangsdokument beigelegt. \\
-\end{tabular}\\
-\\
-\\
-Nach der Entscheidung für eine Variante folgt die weitere Ausarbeitung des Konzeptes
+\begin{figure}[h!]
+	\centering
+    \begin{tabular}{p{1cm}p{10cm}}
+    	\multirow{3}{4cm}	{\includegraphics[width=1cm]{Enddokumentation/Varianten/Bilder/info_icon.png}}
+    	 & Die detaillierte Beschreibung der Lösungsfindung (von der Funktionsskizze bis zum
+    	 Feinkonzept) war Aufgabe des zweiten Testates und ist als Dokument im Anhangsdokument beigelegt. \\
+    \end{tabular}
+\end{figure}
+
+\noindent Nach der Entscheidung für eine Variante folgt die weitere Ausarbeitung des Konzeptes
 in einzelne Feinkonzepte. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme
 aufgesplittet. Zu jedem Subteilproblem existieren wiederum Lösungsvarianten. Im Unterschied 
 zum Grobkonzept erfolgt die Bewertung nicht mit Prozenten, sondern werden die Lösungsvarianten
