--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Testbericht.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Testbericht.tex
@@ -3,11 +3,12 @@
 \fi
 \ifEMBED
 \subsubsection{Aufbaubeschreibung}
+\label{chap:BrushlessAufbaubeschreibung}
     \BLDCcollab \\
 \fi
 \ifEMBED
     \begin{wrapfigure}{r}{0.55\textwidth}
-       	\includegraphics[scale=0.4]{\EtPath/Bilder/MotoransteuerungSchema.jpg}
+       	\includegraphics[scale=0.45]{\EtPath/Bilder/MotoransteuerungSchema.jpg}
        	\centering
        	\caption{Schema des Brushless-Versuchsaufbaus}
         \label{abb:MotoransteuerungSchema}
