--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -9,6 +9,8 @@
 \rule{0pt}{11pt}\textit{Tester}:          & Yves Studer \& Daniel Winz \\
 \rule{0pt}{11pt}\textit{Ziel des Testes}: & Überprüfen, ob der neue Ansatz in der 
 Praxis funktioniert und umsetzbar ist\\
+\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & Die detaillierte Aufbaubeschreibung ist 
+im Kapitel \ref{chap:BrushlessAufbaubeschreibung} aufgeführt.\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Brushless-
 Steuerung funktioniert einwandfrei auch bei einer sehr hohen Drehzahl von bis zu 
 $20000\frac{1}{min}$. Mittels einer Wirbelstrombremse konnte $120 W$ elektrische 
