--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -5,8 +5,12 @@
 \rule{0pt}{11pt}\textit{Datum}:           & 06.11.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
 \rule{0pt}{11pt}\textit{Tester}:          & Matteo, Yves, Pascal\\
-\rule{0pt}{11pt}\textit{Ziel des Testes}: & Eruieren der Nenndrehzahl der DC-Motoren, 
-Optimaler Wurfwinkel, Drehzahl der Schwungräder.  \\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Bestimmung der optimalen Nenndrehzahl der 
+Schwungräder sowie die Optimierung des Wurfwinkel.  \\
+\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & In diesem Test wurden zwei DC-Motoren eingesetzt, 
+die jeweils von einem  Rohde \& Schwarz Labornetzgerät gespiesen wurde. Die Drehzahl der Motoren 
+konnte mittels der Spannung variiert werden. Die Messung der Drehzahl erfolgte über ein berührendes 
+Drehzahlmessgerät, das aus dem Physikbestand der Hochschule Luzern ausgeliehen wurde.\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Ballzuführung 
 muss automatisiert und gleichbleibend sein, damit genaue Aussagen über die Wurfweite 
 gemacht werden können. Unterschiedliche Tennisballmarken haben unterschiedliche 
