--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -7,8 +7,16 @@
 \rule{0pt}{11pt}\textit{Ziel des Testes}: & Das Ziel dieses Testes 
 bestand darin, den gebauten Prototyp (Ballmaschine) auf die Genauigkeit 
 und Wurfweite zu testen, weitere Erkenntnisse über die Drehzahl der Räder 
-zu eruieren und die erforderliche Stromstärke unter realen Bedingungen 
-testen.  \\
+zu eruieren. \\
+\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & 
+Der Wurfmechanismus besteht aus zwei Kunststoffrädern mit einer weichen 
+Pneubeschichtung. Die Räder sind an einer Metallplatte, direkt auf der 
+Welle der Motoren angebracht. Die Motoren sind zwei Gleichstrommotoren, 
+welche direkt an ein Netzteil angeschlossen sind. Die Drehzahl wird 
+über die Spannungsstärke geregelt. Der Abwurfwinkel ist durch die Stellung 
+der Metallplatte gegeben, welche in einem beweglichen Schraubstock 
+eingespannt ist. Dadurch können diverese Winkel eingestellt werden. 
+Die Zuführung der Bälle erfolgt manuell über eine Schiene.\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & 
 Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue 
 \enquote{Schüsse} erzielen. Zu verbessern sind:
@@ -18,19 +26,10 @@ Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue
     \item einstellbares Grundgerüst
 \end{itemize}\\
 \end{tabular}
-
-Der Wurfmechanismus besteht aus zwei Kunststoffrädern mit einer weichen 
-Pneubeschichtung. Die Räder sind an einer Metallplatte, direkt auf der 
-Welle der Motoren angebracht. Die Motoren sind zwei Gleichstrommotoren, 
-welche direkt an ein Netzteil angeschlossen sind. Die Drehzahl wird 
-über die Spannungsstärke geregelt. Der Abwurfwinkel ist durch die Stellung 
-der Metallplatte gegeben, welche in einem beweglichen Schraubstock 
-eingespannt ist. Dadurch können diverese Winkel eingestellt werden. 
-Die Zuführung der Bälle erfolgt manuell über eine Schiene.
 \begin{figure}[h!]
 	\includegraphics[width=0.77\textwidth,clip,trim=0mm 0cm 0mm 0cm]
 	{Funktionstests/Bilder/Ballmaschine.jpg}
 	\centering
 	\caption{Funktionsmuster Ballmaschine} 
-    \label{abb:Ballmaschine_Drehzahl}
+    \label{abb:Ballmaschine_Drehzahl1}
 \end{figure}
