--- a/Dokumentation/Funktionstests/Pneumatikzylinder.tex
+++ b/Dokumentation/Funktionstests/Pneumatikzylinder.tex
@@ -6,6 +6,7 @@
 \rule{0pt}{11pt}\textit{Ort}:             & Bachmann Engineering AG (Zofingen) \\
 \rule{0pt}{11pt}\textit{Tester}:          & Gruppe 32\\
 \rule{0pt}{11pt}\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin, den gebauten Prototyp auf die Wurfwiederholgenauigkeit zu testen. \\
+\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & ????\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Ein Pneumatikzylinder arbeitet sehr zielgenau und schnell. Falls dieses Verfahren in die engere Auswahl kommt, müssen die Parameter wie Beschleunigung, Abschussgeschwindigkeit und Druck berechnet werden.\\ 
 \end{tabular}
 
