Quellen der ET-Gruppe ergänzt

--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/encoder.tex
@@ -89,7 +89,8 @@ Beispiels mit einem Magneten am Rotationskörper.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.75\textwidth]{\EtPath/Bilder/AH180N_functional.png}
-	\caption{Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N}
+	\caption[Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N]
+        {Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N \cite{Datasheet:AH180N}}
 	\label{fig:AH180N_functional}
 \end{figure}
 \fi
@@ -98,7 +99,8 @@ Beispiels mit einem Magneten am Rotationskörper.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.75\textwidth]{\EtPath/Bilder/AH180N_functional.png}
-	\caption{Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N}
+	\caption[Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N]
+        {Funktionelles Blockschaltbild des Hall-Effekt-Schalters AH180N \cite{Datasheet:AH180N}}
 	\label{fig:AH180N_functional}
 \end{figure}
 \fi
