--- a/Dokumentation/Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source.bib
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source.bib
@@ -27,6 +27,24 @@
     year        = {2012}
 }
 
+@techreport{Datasheet:A3941,
+    author          = {{Allegro MicroSystems, LLC}},
+    institution     = {{Allegro MicroSystems, LLC}},
+    title           = {{A3941, Automotive Full Bridge MOSFET Driver}},
+    type            = {{Datasheet}},
+    address         = {{115 Northeast Cutoff Worcester, Massachusetts 01615-0036 U.S.A. }},
+    year            = {2011}
+}
+
+@techreport{Datasheet:AH180N,
+    author          = {{Diodes Incorporated}},
+    institution     = {{Diodes Incorporated}},
+    title           = {{AH180N, MICROPOWER OMNIPOLAR HALL-EFFECT SWITCH}},
+    type            = {{Datasheet}},
+    address         = {{AH180N, MICROPOWER OMNIPOLAR HALL-EFFECT SWITCH}},
+    year            = {2012}
+}
+
 @manual{Doku:Stepper,
     author      = {{Prof. Dr. Wolfgang Matthes}},
     address     = {{Peukinger Weg 34, 59423 Unna}},
@@ -45,7 +63,7 @@
 
 @misc{smps,
     author          = "Ulrich Schlienz",
-    title           = "{Schaltnetzteile und ihre Preipherie}",
+    title           = "{Schaltnetzteile und ihre Peripherie}",
     year	    = "2009",
     edition         = "4",
     publisher       = "Vieweg+Tuebner",
