--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -21,7 +21,7 @@ alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmä
  Wurfweite und eine hohe Reproduzierbarkeit gewährleistet.
 \begin{figure}[h!]
 		\centering
-		\includegraphics[width=0.95\textwidth,clip,trim=0mm 18mm 0mm 24mm]
+		\includegraphics[width=0.95\textwidth,clip,trim=1mm 18mm 5mm 24mm]
 		{Enddokumentation/Loesungskonzept/Bilder/Beschreibung_Komponenten-edited.jpg}
 		\caption{Geräteübersicht}
 		\label{fig:Geraeteuebersicht}
@@ -30,7 +30,7 @@ alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmä
 \begin{table}[h!]
 		\centering
 	\begin{threeparttable} 
-		\begin{tabular}{p{8mm}p{3.5cm}p{8.1cm}}
+		\begin{tabular}{p{6mm}p{4.2cm}p{\textwidth-8cm}}
 		    \textbf{Pos}\tnote{*} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
 			\hline\rule{0pt}{11pt} 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehl, 
 			Akustische und visuelle Signalausgabe \\ 
@@ -38,7 +38,7 @@ alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmä
 			Fotografieren, Auswerten und Steuern des Controllers \\ 
 			  \rule{0pt}{11pt}     3 & Controller & Steuerung und Regelung der Antriebe \\ 
 			  \rule{0pt}{11pt}     4 & Gestell & Stabilisieren des Systems,	seitliche Führung der Bälle \\ 
-			   \rule{0pt}{11pt}    5 & Horizontale\newline Ausrichteinheit & Ausrichten des Gerätes zum Korb \\ 
+			   \rule{0pt}{11pt}    5 & Horizontale Ausrichteinheit & Ausrichten des Gerätes zum Korb \\ 
 			   \rule{0pt}{11pt}    6 & Förderband & Ballförderung zu den Schwungräder \\ 
 			   \rule{0pt}{11pt}    7 & Schwungräder & Beschleunigen der Bälle \\ 
 		\end{tabular}
@@ -49,5 +49,5 @@ alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmä
 		\end{tablenotes}
 	\end{threeparttable} 
 \end{table}
-\parindent 0pt In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, 
+\noindent In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, 
 die einzelnen Komponenten des Ballwerfers näher beschrieben. 
