--- a/Dokumentation/Common/Deckblatt.tex
+++ b/Dokumentation/Common/Deckblatt.tex
@@ -1,9 +1,7 @@
 \begin{titlepage}
     \begin{center}
-        \parindent0pt{\Huge\bfseries \myDokumentTyp}\\
-        \vspace*{0.5cm}
-        {\huge PREN 1, Team 32}\\
-        \vspace*{1.2cm}
+        \parindent0pt{\Huge\bfseries \myDokumentTyp}\\[0.5cm]
+        {\huge PREN 1, Team 32}\\[1cm]
         Yves Studer\\
         Thomas Wiss\\
         Livio Kunz\\
@@ -12,16 +10,15 @@
         Güdel Manuel\\
         Pascal Roth\\
         \vspace*{1cm}
-        {\Huge \myTitel}\\
-        \vspace*{0.5cm}
+        {\Huge \myTitel}\\[0.5cm]
         \begin{figure*}[h!]
             \centering
             \includegraphics[width=0.7\textwidth]{Enddokumentation/Titelbild.JPG}
         \end{figure*}
-        \vspace*{1cm}
-        {\normalsize Hochschule Luzern - Technik \& Architektur}\\
-        {\normalsize PREN 1}\\
-        \vspace*{0.6cm}
-        {\normalsize Horw, Hochschule Luzern - T\&A, \today}\\
+        
+        \vfill{}
+        {\normalsize Hochschule Luzern - Technik \& Architektur\\
+         PREN 1}\\[0.6cm]
+        {\normalsize Horw, Hochschule Luzern - T\&A, \today}
     \end{center}
 \end{titlepage}
