--- a/Dokumentation/Common/Titelblatt.tex
+++ b/Dokumentation/Common/Titelblatt.tex
@@ -1,42 +1,38 @@
 \begin{titlepage}
     \begin{center}
-        \parindent0pt{\Huge\bfseries \myDokumentTyp}\\
-		\vspace*{0.5cm}
-		{\huge PREN 1, Team 32}\\
-		\vspace{2em}
+        \parindent0pt{\Huge\bfseries \myDokumentTyp}\\[0.5cm]
+		{\huge PREN 1, Team 32}\\[2em]
         \begin{tabular}{ll}
-        Yves Studer                & Thomas Wiss \\
-        Dorfstrasse 28             & Bachhüsliweg 4a \\
-        6264 Pfaffnau              & 6042 Dietwil \\
-        +41 79 705 48 88           & +41 79 604 93 61 \\
-        yves.studer@stud.hslu.ch   & thomas.wiss@stud.hslu.ch \\
-                                   & \\
-        Livio Kunz                 & Niklaus Manser \\
-        Hubelmatt 7                & Brunnmattstrasse 11\\
-        6206 Neuenkirch            & 6010 Kriens \\
-        +41 79 811 53 03           & +41 77 405 58 56 \\
-        livio.kunz@stud.hslu.ch    & niklaus.manser@stud.hslu.ch \\
-                                   & \\
-        Matteo Trachsel			   & Manuel Güdel \\
-        Ogimatte 7                 & Riedtalstrasse 4\\
-        3713 Reichenbach           & 4800 Zofingen\\
-        +41 79 511 57 88           & +41 79 774 41 40 \\
-        matteo.trachsel@stud.hslu.ch & manuel.guedel@stud.hslu.ch \\
-        						   & \\
-        Pascal Roth			       & \\
-        Dorfstrasse 18			   & \\
-        6275 Ballwil		       & \\
-        +41 79 717 68 94	       & \\
-        pascal.roth@stud.hslu.ch   & \\
+            Yves Studer                & Thomas Wiss \\
+            Dorfstrasse 28             & Bachhüsliweg 4a \\
+            6264 Pfaffnau              & 6042 Dietwil \\
+            +41 79 705 48 88           & +41 79 604 93 61 \\
+            yves.studer@stud.hslu.ch   & thomas.wiss@stud.hslu.ch \\
+                                       & \\
+            Livio Kunz                 & Niklaus Manser \\
+            Hubelmatt 7                & Brunnmattstrasse 11\\
+            6206 Neuenkirch            & 6010 Kriens \\
+            +41 79 811 53 03           & +41 77 405 58 56 \\
+            livio.kunz@stud.hslu.ch    & niklaus.manser@stud.hslu.ch \\
+                                       & \\
+            Matteo Trachsel			   & Manuel Güdel \\
+            Ogimatte 7                 & Riedtalstrasse 4\\
+            3713 Reichenbach           & 4800 Zofingen\\
+            +41 79 511 57 88           & +41 79 774 41 40 \\
+            matteo.trachsel@stud.hslu.ch & manuel.guedel@stud.hslu.ch \\
+            						   & \\
+            Pascal Roth			       & \\
+            Dorfstrasse 18			   & \\
+            6275 Ballwil		       & \\
+            +41 79 717 68 94	       & \\
+            pascal.roth@stud.hslu.ch   & \\
         \end{tabular}\\
-        \vspace{5em}
-        {\Huge \myTitel}\\
-        \vspace{5em}
-        Dozent: Markus Thalmann\\
-        \vspace{2em}
-        Hochschule Luzern - Technik \& Architektur \\   
+        \vspace{3em}
+        {\Huge \myTitel}\\[5em]
+        Dozent: Markus Thalmann\\[2em]
+        Hochschule Luzern - Technik \& Architektur\\   
         Interdisziplinäre Projektarbeit 2014
-        \vspace{8em}\\
+        \vfill{}
         Horw, Hochschule Luzern - T\&A, \today
     \end{center}
 \end{titlepage}
