Geringfügig an der Darstellung geschraubt

--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
@@ -17,7 +17,8 @@
     \fi
     \ifEMBED
         \begin{wrapfigure}{r}{0.50\textwidth}
-           	\includegraphics[scale=0.45]{\EtPath/Bilder/ZeitlicheHallSensorAnsteuerung.jpg}
+           	\includegraphics[scale=0.50,clip,trim=2mm 0mm 0mm 0mm]
+           	{\EtPath/Bilder/ZeitlicheHallSensorAnsteuerung.jpg}
          	\centering
            	\caption[Zeitliche Darstellung der Ansteuerung mit Hall-Sensoren]
            	{Zeitliche Darstellung der Ansteuerung mit Hall-Sensoren \cite{AppNote:BrushlessuC}}
