--- a/Dokumentation/Enddokumentation/Schluss/Schluss.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Schluss.tex
@@ -18,7 +18,7 @@ geschieht. \\
 \\
 Die Elektrotechnik Studierenden haben sich zu einer ET-Gruppe zusammengeschlossen, um 
 teamübergreifend gemeinsame Probleme zu lösen. Dies hat sich dahingehend ausgezahlt, dass 
-der Brushless-Ansteuerungstest mit dem FPGA mit weniger Aufwand als mit einer diskreten Schaltung 
+der Brushless Ansteuerungstest mit dem FPGA mit weniger Aufwand als mit einer diskreten Schaltung 
 aufgebaut werden konnte. Weiter gibt es Probleme, wie die Stepper-Ansteuerung, die von einer anderen 
 Gruppe erarbeitet wird. Somit kann man sich auf andere Probleme konzentrieren. Ein weiterer wichtiger 
 Aspekt dieser Zusammenarbeit ist, dass realitätsnah eine teamübergeordnete Kollaboration geübt werden 
