--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -1,4 +1,4 @@
-\subsection{Ballmaschine}
+﻿\subsection{Ballmaschine}
 \begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
 \rule{0pt}{11pt}\textit{Datum}:           & 18.10.2014   \\
@@ -9,7 +9,7 @@ bestand darin, den gebauten Prototyp (Ballmaschine) auf die Genauigkeit
 und Wurfweite zu testen, weitere Erkenntnisse über die Drehzahl der Räder 
 zu eruieren. \\
 \rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & 
-Der Wurfmechanismus besteht aus zwei Kunststoffrädern mit einer weichen 
+Der Prototyp der Ballmaschine besteht aus zwei Kunststoffrädern mit einer weichen 
 Pneubeschichtung. Die Räder sind an einer Metallplatte, direkt auf der 
 Welle der Motoren angebracht. Die Motoren sind zwei Gleichstrommotoren, 
 welche direkt an ein Netzteil angeschlossen sind. Die Drehzahl wird 
@@ -18,6 +18,8 @@ der Metallplatte gegeben, welche in einem beweglichen Schraubstock
 eingespannt ist. Dadurch können diverese Winkel eingestellt werden. 
 Die Zuführung der Bälle erfolgt manuell über eine Schiene.\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & 
+Mit diesem Prototyp konnte gezeigt werden, dass die Flugbahn bei gleichmässiger Zuführung sehr konstant ist. Weiter wurde bei einem Abschusswinkel von 45° die meisten Treffer erziehlt. Ist der Winkel zu klein, so besteht die Gefahr, dass die Bälle am Rand des Zielkübels abprallen. Die Zuführung der Bälle erfolgte noch manuel, welches bei ungleichschneller berührung der Schwungräder zu grosser Wurfdiszantabweichung führte. Dieses kann mit einer automatischen Zuführung behoben werden. Beim Abschuss der Bälle werden die Schwungräder immer stark abgebremst. Dadurch gibt es bei zu hoher Schussfrequenz eine Abweichung der Wurfweite. Dadurch müssen die Bälle gestaffelt abgeschossen werden. Die Abbremsung ist auch von der "Quetschung" der Bälle zwischen den Schwungrädern abhängig. Ist diese sehr gross, müssen die Motoren ein viel grösseres Drehmoment aufwenden und brauchen dadurch länger um wieder auf die gewünschte Drehzahl zu gelangen. Dies kann über den Achsenabstand der Schwungräder eingestellt werden.
+\\
 Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue 
 \enquote{Schüsse} erzielen. Zu verbessern sind:
 \begin{itemize}
