--- a/Dokumentation/Enddokumentation/Tests/Testberichte.tex
+++ b/Dokumentation/Enddokumentation/Tests/Testberichte.tex
@@ -1,5 +1,5 @@
-\section{Testberichte}
-In nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. 
+﻿\section{Testberichte}
+Im nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. 
 Diese Tests sind durchgeführt worden, damit einzelne offene Fragen 
 besser beantwortet werden können. Zugleich können einzelne Teilbereiche 
 der Ballbeschleunigung praktisch getestet werden. Das Ziel der Tests ist 
