Inhaltliche Änderungen vorgenommen
Die Darstellung muss ich noch machen

--- a/Dokumentation/Enddokumentation/Tests/Testberichte.tex
+++ b/Dokumentation/Enddokumentation/Tests/Testberichte.tex
@@ -1,4 +1,4 @@
-﻿\section{Testberichte}
+\section{Testberichte}
 Im nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. 
 Diese Tests sind durchgeführt worden, damit einzelne offene Fragen 
 besser beantwortet werden können. Zugleich können einzelne Teilbereiche 
