--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -1,19 +1,25 @@
-﻿\subsection{Ballmaschine (Eruieren der Nenndrehzahl)}
+\subsection{Ballmaschine (Eruieren der Nenndrehzahl)}
 
 \begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
 \rule{0pt}{11pt}\textit{Datum}:           & 06.11.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
 \rule{0pt}{11pt}\textit{Tester}:          & Matteo, Yves, Pascal\\
-\rule{0pt}{11pt}\textit{Ziel des Testes}: & Bestimmung der ungefähren Nenndrehzahl der 
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Bestimmung der Nenndrehzahl der 
 Schwungräder sowie die Optimierung des Wurfwinkel.  \\
-\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & In diesem Test wurden zwei DC-Motoren eingesetzt, 
-die jeweils von einem  Rohde \& Schwarz Labornetzgerät gespiesen wurde. Die Drehzahl der Motoren 
-konnte mittels der Spannung variiert werden. Die Messung der Drehzahl erfolgte über ein berührendes 
+\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & In diesem Test wurde die Ballmaschine 
+aus dem gleichnamigen Test mit demselben Aufbau verwendet. Die Drehzahl der beiden DC-Motoren
+wird mittels der Labornetzgeräte eingestellt. Die Messung der Drehzahl erfolgt über ein berührendes 
 Drehzahlmessgerät, das aus dem Physikbestand der Hochschule Luzern ausgeliehen wurde.\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Ballzuführung 
-muss automatisiert und gleichbleibend sein, damit genaue Aussagen über die Drehzahl und dadurch die Wurfweite 
-gemacht werden können. Weiter ist festgestellt worden, dass es eine markanten Unterschiedliche zwischen unterschiedlichen Tennisballmarken gibt. Diese varieren im Durchmesser und der Härte. Dadurch variert auch wieder die Wurfweite. Für die nächsten Test, müssen fünf für den Wettkampf zugelassene Bälle verwendet werden. Die Drehzahl der Schwungräder bei einem Abstand von 1.8 m beträgt ungefähr 6000 U/min. Diese Zahl wird noch varieren, wenn andere Schwungräder eingesetzt werden. Natürlich ist dies auch von der Zuführgeschwindigkeit abhängig. Für eine Auswahl von einem geeigneten Brushless-Motor, reicht die ungefähre Angabe der Drehzahl aus.
+muss automatisiert und gleichbleibend sein, damit genaue Aussagen über die Drehzahl 
+und dadurch die Wurfweite gemacht werden können. Weiter ist festgestellt worden, dass 
+es eine markanten Unterschiedliche zwischen unterschiedlichen Tennisballmarken gibt. 
+Diese variieren im Durchmesser und Härte. Dadurch variiert auch die Wurfweite. Für 
+die nächsten Test, müssen fünf für den Wettkampf zugelassene Bälle verwendet werden. 
+Die Drehzahl der Schwungräder bei einem Abstand von $1.8 m$ beträgt rund 
+$6000\frac{U}{min}$. Diese Drehzahl wird sich noch ändern, wenn andere Schwungräder 
+eingesetzt werden.
 \end{tabular}
 \begin{figure}[h!]
 	\includegraphics[width=0.7\textwidth,clip,trim=0mm 10cm 0mm 12cm]
