Darstellung der Tests angepasst

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -75,7 +75,7 @@
     \newpage
     \input{Enddokumentation/Tests/Testberichte}
     \input{Funktionstests/Ballmaschine}
-    \newpage
+    \clearpage
     \input{Funktionstests/BallmaschineDrehzahl}
     \newpage
     \input{Funktionstests/Pneumatikzylinder}
