--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -21,10 +21,10 @@ Die Drehzahl der Schwungräder bei einem Abstand von $1.8 m$ beträgt rund
 $6000\frac{U}{min}$. Diese Drehzahl wird sich noch ändern, wenn andere Schwungräder 
 eingesetzt werden.
 \end{tabular}
-\begin{figure}[h!]
-	\includegraphics[width=0.7\textwidth,clip,trim=0mm 10cm 0mm 12cm]
-	{Funktionstests/Bilder/Ballmaschine_Drehzahl1.jpg}
-	\centering
-	\caption{Funktionsmuster Ballmaschine} 
-\label{abb:Ballmaschine_Drehzahl}
-\end{figure}
+%\begin{figure}[h!]
+%	\includegraphics[width=0.7\textwidth,clip,trim=0mm 10cm 0mm 12cm]
+%	{Funktionstests/Bilder/Ballmaschine_Drehzahl1.jpg}
+%	\centering
+%	\caption{Funktionsmuster Ballmaschine} 
+%\label{abb:Ballmaschine_Drehzahl}
+%\end{figure}
