--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -15,7 +15,8 @@ Welle der Motoren angebracht. Die Motoren sind zwei Gleichstrommotoren,
 welche direkt an ein Netzteil angeschlossen sind. Der Abwurfwinkel ist durch die Stellung 
 der Metallplatte gegeben, welche in einem beweglichen Schraubstock 
 eingespannt ist. Dadurch können diverse Winkel eingestellt werden. 
-Die Zuführung der Bälle erfolgt manuell über eine Schiene.\\
+Die Zuführung der Bälle erfolgt manuell über eine Schiene. Der Aufbau des Wurfmechanismus ist
+in den Abbildungen~\ref{figSub:a} bis~\ref{figSub:c} ersichtlich.\\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & 
 Mit diesem Prototyp konnte gezeigt werden, dass die Flugbahn bei gleichmässiger 
 Zuführung sehr konstant ist. Weiter wurde bei einem Abschusswinkel von 45$^\circ$ 
@@ -37,23 +38,39 @@ Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue
     \item Stabilere Achsen
     \item genauere und gleichmässige Zuführung der Bälle.
     \item einstellbares Grundgerüst
-\end{itemize}\\
+\end{itemize}
 \end{tabular}
-
 \begin{figure}[h!]
-    \begin{minipage}[hbt]{0.7\textwidth}
-    	\includegraphics[width=1\textwidth,clip,trim=0mm 0cm 7cm 0cm]
-    	{Funktionstests/Bilder/Ballmaschine.jpg}
-    	\centering
-    	\caption{Funktionsmuster Ballmaschine} 
-        \label{abb:Ballmaschine_Drehzahl1}
-    \end{minipage}
-\hfill
-    \begin{minipage}[hbt]{0.3\textwidth}
-    	\includegraphics[width=.9\textwidth,clip,trim=27cm 2cm 0mm 2.5cm]
-    	{Funktionstests/Bilder/Ballmaschine.jpg}
-    	\centering
-    	\caption{Funktionsmuster Front Ansicht} 
-        \label{abb:Ballmaschine_Drehzahl1}
-    \end{minipage}
+    \subfigure[Gesamtaufbau\label{figSub:a}]
+    {\includegraphics[width=0.6\textwidth,clip,trim=0mm 14cm 0mm 12cm] 
+    {Funktionstests/Bilder/Ballmaschine_Drehzahl1.jpg}}
+    \hfill
+    \subfigure[Funktionsmuster Front Ansicht\label{figSub:b}]
+    {\includegraphics[width=0.35\textwidth,clip,trim=27cm 3cm 0mm 2cm]
+    {Funktionstests/Bilder/Ballmaschine.jpg}}
+    \vfill
+    \subfigure[Funktionsmuster Ballmaschine\label{figSub:c}]
+    {\includegraphics[width=1\textwidth,clip,trim=0mm 0cm 7cm 0cm] 
+    {Funktionstests/Bilder/Ballmaschine.jpg}}
+%
+\caption{Funktionsmuster Ballmaschine}
+\label{fig:Ballmaschine}
 \end{figure}
+%
+%\begin{figure}[h!]
+%    \begin{minipage}[hbt]{0.7\textwidth}
+%    	\includegraphics[width=1\textwidth,clip,trim=0mm 0cm 7cm 0cm]
+%    	{Funktionstests/Bilder/Ballmaschine.jpg}
+%    	\centering
+%    	\caption{Funktionsmuster Ballmaschine} 
+%        \label{abb:Ballmaschine_Drehzahl1}
+%    \end{minipage}
+%\hfill
+%    \begin{minipage}[hbt]{0.3\textwidth}
+%    	\includegraphics[width=.9\textwidth,clip,trim=27cm 2cm 0mm 2.5cm]
+%    	{Funktionstests/Bilder/Ballmaschine.jpg}
+%    	\centering
+%    	\caption{Funktionsmuster Front Ansicht} 
+%        \label{abb:Ballmaschine_Drehzahl1}
+%    \end{minipage}
+%\end{figure}
