--- a/Dokumentation/Enddokumentation/Loesungskonzept/Hardware.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Hardware.tex
@@ -1,3 +1,11 @@
+\subsection{Hardware}
+    \input{\EtPath/../common/Hardwarezusammenarbeit}
+    \newpage
+    \input{\EtPath/Ansteuerung}
+    \input{\EtPath/fallback}
+    \input{\EtPath/encoder}
+    \newpage
+    %
 \subsubsection{Stepper-Motor}
     Der Motor der die Ausrichtung des Werfers vornimmt muss sehr genau und 
     reproduzierbar die Ausrichtung vornehmen. Aus diesem Grund wird ein 
