--- a/Dokumentation/Enddokumentation/Anhang/BerechnungDrehmomentFoerderband.tex
+++ b/Dokumentation/Enddokumentation/Anhang/BerechnungDrehmomentFoerderband.tex
@@ -28,29 +28,25 @@ Um einen geeigneten Antrieb für das Förderband zu erörtern, muss das Drehmome
 und die Drehzahl bekannt sein.
 \begin{figure}[h!]
     \begin{tikzpicture}[scale = 1.2]
-    \draw [-,line width=2pt](0,0) circle (10pt);\draw [-,line width=2pt](6,0) circle (10pt); 
-    %beide Kreise der hauptrollen
-    \draw  (0,10pt) -- (6, 10pt); \draw (0,-11pt) -- (6,-11pt); %die beiden Förderbänder-Striche
-    \draw (0,-2pt) -- (0, 2pt); \draw (0cm-2pt,0) -- (0cm+2pt, 0); %Das x der ersten Rolle
-    \draw (6,-2pt) -- (6, 2pt); \draw (6cm-2pt,0) -- (6cm+2pt, 0); %Das x der zweiten Rolle
-    \draw [<-] (6cm-0pt , 5pt) -- (7,0.5)node[right]{$m_{Umlenkrolle}$}; %zeige-Linie auf das 
-    %Hintere Rad mit Text
-    \draw (5,10pt) -- (5, 24pt);\draw (5.7,10pt) -- (5.7, 24pt);\draw (5,24pt) -- (5.7, 24pt);
-    \node  at (5.35,18pt) {$m_B$};
-    \draw (3.875,10pt) -- (3.875, 24pt);\draw (4.575,10pt) -- (4.575, 24pt);\draw (3.875,24pt) 
-    -- (4.575, 24pt);\node  at (4.2,18pt) {$m_B$};
-    \draw (2.75,10pt) -- (2.75, 24pt);\draw (3.45,10pt) -- (3.45, 24pt);\draw (2.75,24pt) -- 
-    (3.45, 24pt);\node  at (3.1,18pt) {$m_B$};
-    \draw (1.625,10pt) -- (1.625, 24pt);\draw (2.325,10pt) -- (2.325, 24pt);\draw (1.625,24pt) 
-    -- (2.325, 24pt);\node  at (1.975,18pt) {$m_B$};
-    \draw (0.5,10pt) -- (0.5, 24pt);\draw (1.2,10pt) -- (1.2, 24pt);\draw (0.5,24pt) -- 
-    (1.2, 24pt);\node  at (.8,18pt) {$m_B$};
-    \draw (0,-18pt) circle (7pt);  \draw [<-] (2pt , -20pt) -- (25pt,-25pt)node[right]
-    {$m_{Antrieb}$}; %zeige-Linie auf das Antriebsrad mit Beschriftung
-    \draw [<-] (-4pt , 4pt) -- (4pt,1.3)node[right]{$z_1 = 50$}; %zeige-Linie auf das linke 
-    %Umlenkrad mit Beschriftung
-    \draw [<-] (-3pt , -19pt) -- (4pt,-1.6)node[right]{$z_2 = 10$}; %zeige-Linie auf das 
-    %Antriebsrad mit Beschriftung
+        \draw [-,line width=2pt](0,0) circle (10pt);\draw [-,line width=2pt](6,0) circle (10pt); 
+        %beide Kreise der Hauptrollen
+        \draw  (0,10pt) -- (6, 10pt); \draw (0,-11pt) -- (6,-11pt); %die beiden Förderbänder-Striche
+        \draw (0,-2pt) -- (0, 2pt); \draw (0cm-2pt,0) -- (0cm+2pt, 0); %Das x der ersten Rolle
+        \draw (6,-2pt) -- (6, 2pt); \draw (6cm-2pt,0) -- (6cm+2pt, 0); %Das x der zweiten Rolle
+        \draw [<-] (6cm-0pt , -5pt) -- (5.5,-1)node[left]{$m_{Umlenkrolle}$}; %zeige-Linie auf das 
+        %Hintere Rad mit Text
+        \draw (0.7,10pt) -- ++(0, 14pt)-- ++(22pt,0) -- ++(0, -14pt);\node  at (1.1,18pt) {$m_{Ball}$};
+        \draw (1.7,10pt) -- ++(0, 14pt)-- ++(22pt,0) -- ++(0, -14pt);\node  at (2.1,18pt) {$m_{Ball}$};
+        \draw (2.7,10pt) -- ++(0, 14pt)-- ++(22pt,0) -- ++(0, -14pt);\node  at (3.1,18pt) {$m_{Ball}$};
+        \draw (3.7,10pt) -- ++(0, 14pt)-- ++(22pt,0) -- ++(0, -14pt);\node  at (4.1,18pt) {$m_{Ball}$};
+        \draw (4.7,10pt) -- ++(0, 14pt)-- ++(22pt,0) -- ++(0, -14pt);\node  at (5.1,18pt) {$m_{Ball}$};
+        \draw (0,-18pt) circle (7pt);  \draw [<-] (2pt , -20pt) -- (25pt,-25pt)node[right]
+        {$m_{Antrieb}$}; %zeige-Linie auf das Antriebsrad mit Beschriftung
+        \draw (-1pt,-18pt) -- (1pt,-18pt); \draw (0,-19pt) -- (0, -17pt); %Das x der zweiten Rolle
+        \draw [<-] (-4pt , 4pt) -- (4pt,1.3)node[right]{$z_1 = 50$}; %zeige-Linie auf das linke 
+        %Umlenkrad mit Beschriftung
+        \draw [<-] (-3pt , -19pt) -- (4pt,-1.6)node[right]{$z_2 = 10$}; %zeige-Linie auf das 
+        %Antriebsrad mit Beschriftung
     \end{tikzpicture}
    	\centering
     \caption{Erläuterungen zur Förderbandberechnung}
