--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -25,3 +25,6 @@ Seite dargestellte Grafik ist die Projektplanung über den Zeitraum von PREN 1.
 Arbeiten, die noch nicht fertig sind oder die über den ganzen Zeitraum des 
 PREN-Moduls laufen, werden Ende PREN 1 in eine neue Projektplanung für PREN2 
 überführt. Für diese Planung wird wiederum die selbe Excel-Vorlage verwendet. 
+
+\subsubsection{Soll- Ist-Zeitvergleich}
+???
