--- a/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
@@ -1,11 +1,11 @@
-\subsection{Acrylglas}
+﻿\subsection{Acrylglas}
 \begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 	\rule{0pt}{11pt}\textit{Typ}              & Lagerung und Bohrung in Acrylglas  \\ 
 	\rule{0pt}{11pt}\textit{Datum}:           & 21.11.2014   \\
 	\rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
 	\rule{0pt}{11pt}\textit{Tester}:          & Matteo, Pascal\\
 	\rule{0pt}{11pt}\textit{Ziel des Testes}: & Lassen sich Wälzlager in Acrylglas (PMMA) einpressen und halten sie den herrschenden Druck stand? Verhalten, Möglichkeiten von Bohrungen in $5 mm$ Acrylglas. \\
-	\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & ????\\
+	\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & Die Bohrung ist mit einer Standbohrmaschine realisiert worden. Das Lager ist mit hilfe des Bohrkopfes der Standbohrmaschine in das Acrylglas gepresst worden.\\
 	\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Beim ersten Versuch sind Spannungsrisse aufgetreten (siehe Pfeil in Abbildung \ref{abb:LagerPlexiglas}). 
 	Um dem entgegenzuwirken, wurde in einem zweiten Versuch die $16 mm$ Bohrung mit 
 	Schleifpapier geringfügig vergrössert, damit sich das Lager leichter einpressen lässt. 
