--- a/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/AcrylglasTest.tex
@@ -1,4 +1,4 @@
-﻿\subsection{Acrylglas}
+\subsection{Acrylglas}
 \begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 	\rule{0pt}{11pt}\textit{Typ}              & Lagerung und Bohrung in Acrylglas  \\ 
 	\rule{0pt}{11pt}\textit{Datum}:           & 21.11.2014   \\
