--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -10,20 +10,21 @@
     \begin{longtable}{p{1.7cm}rllcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
     & \textbf{Total} \\
-    \hline Zuführung: & 1     & Flachbandriemen 	          &  Fr. 50.00 &  Fr. 50.00 \\
+    \hline     &       &                              &            &            \\
+    Zuführung: & 1     & Flachbandriemen              &  Fr. 50.00 &  Fr. 50.00 \\
                & 1     & Achse          	          &  Fr. -     &  Fr. -     \\
                & 1     & Welle                     	  &  Fr. -     &  Fr. -     \\
                & 1     & Zahnrad         	          &  Fr. 8.00  &  Fr. 8.00  \\
                & 1     & Zahnrad         	          &  Fr. 8.00  &  Fr. 8.00  \\
                & 1     & DC-Motor        	          &  Fr. 20.00 &  Fr. 20.00 \\
                &       &                 	          &            &            \\
-       Geräst: & 2     & Seitenplatte    	          &  Fr. 15.00 &  Fr. 30.00 \\
+       Gerüst: & 2     & Seitenplatte    	          &  Fr. 15.00 &  Fr. 30.00 \\
                & 4     & Stützstangen    	          &  Fr. -     &  Fr. -     \\
                & 2     & Bodenplättchen  	          &  Fr. -     &  Fr. -     \\
                & 1     & Hardware (Controller)        &  Fr. 50.00 &  Fr. 50.00 \\
                & 1     & Hardwarekomponenten          &  Fr. 40.00 &  Fr. 40.00 \\
                &       &       				          &      	   &            \\
-   \multirow{3}{1.7cm}{Antrieb Schwungräder:}  
+   \multirow{2}{1.7cm}{Antrieb Schwungräder:}  
                & 2     & Zahnrad Z15                  &  Fr. 2.88  &  Fr. 5.76  \\
                & 2     & Zahnrad Z30 	              &  Fr. 4.05  &  Fr. 8.10  \\
                & 2     & Zahnrad Z15 	        	  &  Fr. 3.44  &  Fr. 6.88  \\
