--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -1,15 +1,15 @@
 \begin{landscape}
 \subsection{Zeit}	
     \begin{figure}[h!]
-        \includegraphics[page=1,scale=0.8,clip,trim=7mm 90mm 31mm 39mm] {Enddokumentation/Projektplanung_Management/Bilder/Projektzeitachse.pdf}
+        \includegraphics[page=1,scale=0.88,clip,trim=7mm 90mm 31mm 39mm] {Enddokumentation/Projektplanung_Management/Bilder/Projektzeitachse.pdf}
         \centering
         \caption{Zeitplan des Projekts} 
         \label{abb:ProjektZeitstrahl}
     \end{figure}
     
-    \includegraphics[page=1,scale=0.8,clip,trim=15mm 22mm 13mm 18mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
+    \includegraphics[page=1,scale=0.85,clip,trim=15mm 22mm 13mm 18mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
     \newpage
-    \includegraphics[page=2,scale=0.8,clip,trim=15mm 100mm 13mm 10mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
+    \includegraphics[page=2,scale=0.85,clip,trim=15mm 100mm 13mm 10mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
     \newpage
 \end{landscape}
 \subsubsection{Erläuterung zur Projektplanung}
@@ -27,4 +27,22 @@ PREN-Moduls laufen, werden Ende PREN 1 in eine neue Projektplanung für PREN2
 überführt. Für diese Planung wird wiederum die selbe Excel-Vorlage verwendet. 
 
 \subsubsection{Soll- Ist-Zeitvergleich}
-???
+Die Zeiten welche in der Projektplanung angegeben sind, sind als Schätzungen 
+zu betrachten. Sie wurden jeweils zu Beginn des Arbeitsblockes durch die 
+Verantwortliche Person gemacht. Arbeitszeitrapporte oder Stundenblätter wurden 
+nicht geführt dadurch kann die effektiv an einem Arbeitsblock gearbeitete Zeit 
+abweichen. Vor allem den Administrativen Arbeiten und dem Dokumentieren wurde 
+zu wenig Zeit zugesprochen. Dies zeigte sich jeweils beim Abschluss eines 
+solchen Teilbereichs. Layout, Korrekturlesen, Änderungen etc. brauchten im 
+Endeffekt fast immer mehr Zeit als veranschlagt. Dies ist ein wichtiger Punkt 
+den es in der Zeitplanung im Hinblick auf PREN2 zu beachten gilt. Die grösste 
+Abweichung von der Planung gibt es sicher bei der Dokumentation. Hier wurde 
+der Aufwand deutlich unterschätzt. Mit allen Formatierungs- und Layoutarbeiten 
+ist schlussendlich sicher die doppelte Zeit dafür aufgewendet worden. Andere 
+Arbeiten wie z.B. die Testversuche konnten gut im dafür vorgesehenen Zeitrahmen 
+abgeschlossen werden. Über alles gesehen wird der Aufwand um ca. einen Viertel 
+grösser sein als die Schätzung. Dies hängt hauptsächlich mit dem grösseren 
+Aufwand für die Dokumentierarbeiten und die ganze Morphologie zusammen. Für 
+PREN2 werden konservativere Schätzungen vorgenommen und zudem hat jedes 
+Teammitglied über den jeweiligen Arbeitsaufwand Buch zu führen. Dies lässt 
+bessere und genauere Rückschlüsse für weitere Projekte zu. 
