Scheinwerfer-Leistung ergänzt

--- a/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
+++ b/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
@@ -17,7 +17,7 @@
 	\rule{0pt}{11pt}\textit{Tester}:          & Thomas, Pascal, Livio, Matteo, Niklaus\\
 	\rule{0pt}{11pt}\textit{Ziel des Testes}: & Es soll festgestellt werden, ob der entwickelte 
 	Algorithmus zur Korberkennung bei Verwendung von starken Scheinwerfern funktioniert. Besonderes Augenmerk liegt auf dem Schattenwurf auf der Rückwand und die Belichtung des Korbes selbst. \\
-	\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & Das Modellspielfeld wurde mit zwei ??? Watt 
+	\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & Das Modellspielfeld wurde mit zwei $500 Watt$ 
 	Scheinwerfern ausgeleuchtet und anschliessend mit mehreren Smartphones (LG Nexus, HTC One 
 	und Nokia Lumia) abfotografiert. Die Resultate wurden dem entwickelten Prototypen zur Auswertung übergeben. 
 	\\
